# Libs

include/windows/lua/: CMakeLists.txt
lib/windows/: libevent.lib  libevent_core.lib  libevent_extras.lib  liblua.exp  liblua.lib
